# mangos-tbc

./: .gitignore  CMakeLists.txt
cmake/: options.cmake  showoptions.cmake
sql/updates/mangos/: s9999_01_mangos_gps_command_tile.sql
src/: CMakeLists.txt
src/game/: CMakeLists.txt
src/game/AI/ScriptDevAI/system/: ScriptLoader.cpp
src/game/AuctionHouse/: AuctionHouseHandler.cpp  AuctionHouseMgr.cpp
src/game/BattleGround/: BattleGround.cpp  BattleGroundHandler.cpp
src/game/Chat/: Chat.cpp  Chat.h  ChatHandler.cpp  Level3.cpp
src/game/Entities/: CharacterHandler.cpp  Creature.cpp  Creature.h  ItemHandler.cpp  NPCHandler.cpp  Object.cpp  Pet.cpp  Player.cpp  Player.h  QueryHandler.cpp  Unit.cpp  Unit.h
src/game/Grids/: GridNotifiersImpl.h
src/game/Loot/: LootHandler.cpp  LootMgr.cpp
src/game/Mails/: MailHandler.cpp
src/game/Maps/: Map.cpp  Map.h
src/game/Quests/: QuestHandler.cpp
src/game/Server/: DBCStores.cpp  DBCStores.h  DBCStructure.h  DBCfmt.h  WorldSession.cpp  WorldSession.h
src/game/Spells/: Spell.cpp  SpellEffects.cpp  SpellHandler.cpp
src/game/World/: World.cpp
src/mangosd/: Master.cpp
